# hybrid-HE-framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Readme.md
ciphers/: CMakeLists.txt
ciphers/agrasta/: Readme.md
ciphers/agrasta/helib/: agrasta_helib.cpp  agrasta_helib.h  testvectors.h
ciphers/agrasta/plain/: agrasta_plain.cpp  agrasta_plain.h  testvectors.h
ciphers/agrasta/seal/: agrasta_seal.cpp  agrasta_seal.h  testvectors.h
ciphers/agrasta/tfhe/: agrasta_tfhe.cpp  agrasta_tfhe.h  testvectors.h
ciphers/agrasta_packed/: Readme.md
ciphers/agrasta_packed/helib/: agrasta_packed_helib.cpp  agrasta_packed_helib.h  testvectors.h
ciphers/agrasta_packed/plain/: agrasta_packed_plain.cpp  agrasta_packed_plain.h  testvectors.h
ciphers/common/: Cipher.h  HElib_Cipher.cpp  HElib_Cipher.h  SEAL_Cipher.cpp  SEAL_Cipher.h  TFHE_Cipher.cpp  TFHE_Cipher.h  helib_kats.h  kats.h  matrix.h  matrix_helib.h  seal_kats.h  tfhe_kats.h  utils.h
ciphers/common_Zp/: Cipher.h  HElib_Cipher.cpp  HElib_Cipher.h  SEAL_Cipher.cpp  SEAL_Cipher.h  helib_kats.h  kats.h  matrix.h  matrix_helib.h  seal_kats.h
ciphers/dasta_5/: Readme.md
ciphers/dasta_5/helib/: dasta_5_helib.cpp  dasta_5_helib.h  testvectors.h
ciphers/dasta_5/plain/: dasta_5_plain.cpp  dasta_5_plain.h  layer525.h  testvectors.h
ciphers/dasta_5/seal/: dasta_5_seal.cpp  dasta_5_seal.h  testvectors.h
ciphers/dasta_5/tfhe/: dasta_5_tfhe.cpp  dasta_5_tfhe.h  testvectors.h
ciphers/dasta_5_packed/: Readme.md
ciphers/dasta_5_packed/helib/: dasta_5_packed_helib.cpp  dasta_5_packed_helib.h  testvectors.h
ciphers/dasta_5_packed/plain/: dasta_5_packed_plain.cpp  dasta_5_packed_plain.h  testvectors.h
ciphers/dasta_6/: Readme.md
ciphers/dasta_6/helib/: dasta_6_helib.cpp  dasta_6_helib.h  testvectors.h
ciphers/dasta_6/plain/: dasta_6_plain.cpp  dasta_6_plain.h  testvectors.h
ciphers/dasta_6/seal/: dasta_6_seal.cpp  dasta_6_seal.h  testvectors.h
ciphers/dasta_6/tfhe/: dasta_6_tfhe.cpp  dasta_6_tfhe.h  testvectors.h
ciphers/dasta_6_packed/: Readme.md
ciphers/dasta_6_packed/helib/: dasta_6_packed_helib.cpp  dasta_6_packed_helib.h  testvectors.h
ciphers/dasta_6_packed/plain/: dasta_6_packed_plain.cpp  dasta_6_packed_plain.h  layer351.h  testvectors.h
ciphers/filip_1216/: Readme.md
ciphers/filip_1216/helib/: filip_1216_helib.cpp  filip_1216_helib.h  testvectors.h
ciphers/filip_1216/plain/: filip_1216_plain.cpp  filip_1216_plain.h  testvectors.h
ciphers/filip_1216/seal/: filip_1216_seal.cpp  filip_1216_seal.h  testvectors.h
ciphers/filip_1216/tfhe/: filip_1216_tfhe.cpp  filip_1216_tfhe.h  testvectors.h
ciphers/filip_1280/: Readme.md
ciphers/filip_1280/helib/: filip_1280_helib.cpp  filip_1280_helib.h  testvectors.h
ciphers/filip_1280/plain/: filip_1280_plain.cpp  filip_1280_plain.h  testvectors.h
ciphers/filip_1280/seal/: filip_1280_seal.cpp  filip_1280_seal.h  testvectors.h
ciphers/filip_1280/tfhe/: filip_1280_tfhe.cpp  filip_1280_tfhe.h  testvectors.h
ciphers/he_only/helib/: he_only_helib.cpp  he_only_helib.h  testvectors.h
ciphers/he_only/plain/: he_only_plain.cpp  he_only_plain.h  testvectors.h
ciphers/he_only/seal/: he_only_seal.cpp  he_only_seal.h  testvectors.h
ciphers/he_only_z2/plain/: he_only_z2_plain.cpp  he_only_z2_plain.h  testvectors.h
ciphers/he_only_z2/tfhe/: he_only_z2_tfhe.cpp  he_only_z2_tfhe.h  testvectors.h
ciphers/hera_5/: Readme.md
ciphers/hera_5/helib/: hera_5_helib.cpp  hera_5_helib.h  testvectors.h
ciphers/hera_5/plain/: hera_5_plain.cpp  hera_5_plain.h  testvectors.h
ciphers/hera_5/seal/: hera_5_seal.cpp  hera_5_seal.h  testvectors.h
ciphers/kreyvium/: Readme.md
ciphers/kreyvium/helib/: kreyvium_helib.cpp  kreyvium_helib.h  testvectors.h
ciphers/kreyvium/plain/: kreyvium_plain.cpp  kreyvium_plain.h  testvectors.h
ciphers/kreyvium/seal/: kreyvium_seal.cpp  kreyvium_seal.h  testvectors.h
ciphers/kreyvium/tfhe/: kreyvium_tfhe.cpp  kreyvium_tfhe.h  testvectors.h
ciphers/kreyvium_12/: Readme.md
ciphers/kreyvium_12/helib/: kreyvium_12_helib.cpp  kreyvium_12_helib.h  testvectors.h
ciphers/kreyvium_12/plain/: kreyvium_12_plain.cpp  kreyvium_12_plain.h  testvectors.h
ciphers/kreyvium_12/seal/: kreyvium_12_seal.cpp  kreyvium_12_seal.h  testvectors.h
ciphers/kreyvium_12/tfhe/: kreyvium_12_tfhe.cpp  kreyvium_12_tfhe.h  testvectors.h
ciphers/kreyvium_13/: Readme.md
ciphers/kreyvium_13/helib/: kreyvium_13_helib.cpp  kreyvium_13_helib.h  testvectors.h
ciphers/kreyvium_13/plain/: kreyvium_13_plain.cpp  kreyvium_13_plain.h  testvectors.h
ciphers/kreyvium_13/seal/: kreyvium_13_seal.cpp  kreyvium_13_seal.h  testvectors.h
ciphers/kreyvium_13/tfhe/: kreyvium_13_tfhe.cpp  kreyvium_13_tfhe.h  testvectors.h
ciphers/lowmc/: Readme.md
ciphers/lowmc/helib/: lowmc_helib.cpp  lowmc_helib.h  testvectors.h
ciphers/lowmc/plain/: lowmc_plain.cpp  lowmc_plain.h  testvectors.h
ciphers/lowmc/seal/: lowmc_seal.cpp  lowmc_seal.h  testvectors.h
ciphers/lowmc/tfhe/: lowmc_tfhe.cpp  lowmc_tfhe.h  testvectors.h
ciphers/masta_4/: Readme.md
ciphers/masta_4/helib/: masta_4_helib.cpp  masta_4_helib.h  testvectors.h
ciphers/masta_4/plain/: masta_4_plain.cpp  masta_4_plain.h  testvectors.h
ciphers/masta_4/seal/: masta_4_seal.cpp  masta_4_seal.h  testvectors.h
ciphers/masta_5/: Readme.md
ciphers/masta_5/helib/: masta_5_helib.cpp  masta_5_helib.h  testvectors.h
ciphers/masta_5/plain/: masta_5_plain.cpp  masta_5_plain.h  testvectors.h
ciphers/masta_5/seal/: masta_5_seal.cpp  masta_5_seal.h  testvectors.h
ciphers/pasta2_3/helib/: pasta2_3_helib.cpp  pasta2_3_helib.h  testvectors.h
ciphers/pasta2_3/plain/: pasta2_3_plain.cpp  pasta2_3_plain.h  testvectors.h
ciphers/pasta_3/: Readme.md
ciphers/pasta_4/: Readme.md
ciphers/rasta_5/: Readme.md
ciphers/rasta_5_packed/: Readme.md
ciphers/rasta_6/: Readme.md
ciphers/rasta_6_packed/: Readme.md
tests/: CMakeLists.txt  helib_test.cpp.in  plain_test.cpp.in  seal_test.cpp.in  tfhe_test.cpp.in
util/keccak/: CMakeLists.txt  KeccakHash.c  KeccakHash.h  KeccakSponge.inc  portable_endian.h
(+79 files in other folders)
